Added default RTTTL tone

--- a/rtttl.html
+++ b/rtttl.html
@@ -200,7 +200,7 @@
         <div>
             <button id="previewbutton">Preview</button>
             <label for="inputbox">Ringtone</label>
-            <input type="text" class="full-width" id="inputbox" />
+            <input type="text" class="full-width" id="inputbox" value="Star Trek:o=5,d=16,b=90:8f.,a#,4d#6.,8d6,a#.,g.,c6.,4f6,8p,f6,4a6." />
         </div>
 
         <br />
@@ -244,6 +244,8 @@
                 alert('ERROR: ' + e);
             }
         });
+
+        $('#inputbox').change();
     </script>
 </body>
 </html>
