--- a/rtttl.html
+++ b/rtttl.html
@@ -209,7 +209,7 @@
         <textarea id="outputbox" class="full-width" rows="20" readonly="readonly"></textarea>
 
         <br /><hr />
-        <small>Copyright Sasha Kotlyar. Source code and license information are <a href="https://github.com/arktronic/mikrotik-scripts">here</a>.</small>
+        <small>Source code and license information are <a href="https://github.com/arktronic/mikrotik-scripts">here</a>.</small>
     </div>
     <script>
         $('#inputbox').on('input change', function() {
